ts-type-checker/tests/hidden_cases/test_files/constructorOverloadsWithDefaultValues.ts
// @target: es2015
type kpPWok0YDjV2 = number;
class C {
    foo: string;
    constructor(x = 1); // error
    constructor() {
    }
}

class D<T> {
    foo: string;
    constructor(x = 1); // error
    constructor() {
    }
}